# libcsuit

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  EXAMPLES.md  INSTALL.md  LICENSE  Makefile  Makefile.common  Makefile.encode  Makefile.encrypt  Makefile.min_process  Makefile.parser  Makefile.process  Makefile.sign  Makefile.teep  PROCESS.md  README.md  SUPPORTED.md  TABLES_MANIFEST_SUPPORTED.md  TABLES_REPORT_SUPPORTED.md  TABLES_SUPPORTED.md  calc_supported.py  common.mk  max.Dockerfile  min.Dockerfile  min0.Dockerfile  min1.Dockerfile  min2.Dockerfile  min3.Dockerfile  min4.Dockerfile  min5.Dockerfile  ossl.Dockerfile  ossl3.Dockerfile  psa.Dockerfile
.github/workflows/: codeql.yml  docker-image-min.yml  docker-image-ossl.yml  docker-image-ossl3.yml  docker-image-psa.yml  pages.yml
examples/: Makefile  README.md  common.mk  suit_examples_common.c  suit_examples_cose.c  suit_manifest_decrypt_main.c  suit_manifest_encode_main.c  suit_manifest_encrypt_aes_main.c  suit_manifest_encrypt_esdh_main.c  suit_manifest_encrypt_main.c  suit_manifest_parser_main.c  suit_manifest_process_main.c  suit_manifest_process_main_min.c  suit_manifest_sign_main.c
examples/encode/: Makefile  suit_manifest_encode_main.c
examples/encrypt/: Makefile  suit_manifest_decrypt_main.c  suit_manifest_encrypt_aes_main.c  suit_manifest_encrypt_esdh_main.c
examples/inc/: delegated_authority_cose_key_private.h  delegated_authority_cose_key_public.h  device_es256_cose_key_private.h  device_es256_cose_key_public.h  device_esdh_cose_key_private.h  device_esdh_cose_key_public.h  device_esp256_cose_key_private.h  device_esp256_cose_key_public.h  suit_examples_common.h  tam_es256_cose_key_private.h  tam_es256_cose_key_public.h  tam_es256_private_key.h  tam_es256_public_key.h  tam_esp256_cose_key_private.h  tam_esp256_cose_key_public.h  trust_anchor_a128_cose_key_secret.h  trust_anchor_a128_secret_key.h  trust_anchor_es256_cose_key_private.h  trust_anchor_es256_cose_key_public.h  trust_anchor_esdh_cose_key_private.h  trust_anchor_esdh_cose_key_public.h  trust_anchor_esp256_cose_key_private.h  trust_anchor_esp256_cose_key_public.h  trust_anchor_hmac256_cose_key_secret.h  trust_anchor_prime256v1.h  trust_anchor_prime256v1_cose_key_private.h  trust_anchor_prime256v1_cose_key_public.h  trust_anchor_prime256v1_pub.h
examples/min_process/: Makefile  config.h  minimize_mbedtls.sh  suit_manifest_process_main.c
examples/parser/: Makefile  suit_manifest_parser_main.c
examples/process/: .gitignore  Makefile  README.md  suit_manifest_process_main.c
examples/sign/: Makefile  suit_manifest_sign_main.c
inc/csuit/: config.h  csuit.h  suit_common.h  suit_cose.h  suit_digest.h  suit_manifest_callbacks.h  suit_manifest_data.h  suit_manifest_decode.h  suit_manifest_encode.h  suit_manifest_print.h  suit_manifest_process.h  suit_reporting_engine.h
misc/: TABLES_MANIFEST_SUPPORTED.md  TABLES_REPORT_SUPPORTED.md  analyze_size.py  calc_binary_size.sh  calc_size.sh  calc_source_size.sh  calc_supported.py  calc_table.py  calc_x86_32_binary_size.sh  deterministic_ecdsa.patch  process_example0.txt  result_size.txt  result_size_armv7l.txt  result_size_x86_32.txt  result_size_x86_64.txt  table_size.csv  table_size_armv7l.csv  table_size_x86_64.csv  update_copyright.sh  x86_32_other  x86_64_other
misc/config/: crypto_config.h  max_config.h  mbedtls_config.h  min_config.h
misc/dockerfile/: min0.Dockerfile  min1.Dockerfile  min1_32.Dockerfile  min2.Dockerfile  min3.Dockerfile  min4.Dockerfile  min5.Dockerfile  nm1.Dockerfile  nm1_32.Dockerfile  nm2.Dockerfile  nm3.Dockerfile  nm4.Dockerfile  nm5.Dockerfile
misc/img/: Makefile  process.aasvg
src/: suit_common.c  suit_cose.c  suit_digest.c  suit_manifest_callbacks.c  suit_manifest_decode.c  suit_manifest_encode.c  suit_manifest_print.c  suit_manifest_process.c  suit_report_print.c  suit_reporting_engine.c
test/: Makefile  main.c  process_test.c
testfiles/: .gitignore  Makefile  README.md  config.json  encryption_info.cose  encryption_info_aes.cose  encryption_info_config_aes.cose  encryption_info_config_esdh.cose  encryption_info_esdh.cose  suit_manifest_exp0.diag  suit_manifest_exp0.md  suit_manifest_exp0.suit  suit_manifest_exp1.diag  suit_manifest_exp1.md  suit_manifest_exp1.suit  suit_manifest_exp2.md  suit_manifest_exp2A.diag  suit_manifest_exp2A.suit  suit_manifest_exp2B.diag  suit_manifest_exp2B.suit  suit_manifest_exp3.diag  suit_manifest_exp3.md  suit_manifest_exp3.suit  suit_manifest_exp4.diag  suit_manifest_exp4.md  suit_manifest_exp4.suit  suit_manifest_exp5.diag  suit_manifest_exp5.md  suit_manifest_exp5.suit  suit_manifest_expAF.cbor  suit_manifest_expAF.diag  suit_manifest_expAF.md  suit_manifest_expAF.suit  suit_manifest_expAFS.diag  suit_manifest_expAFS.md  suit_manifest_expAFS.suit  suit_manifest_expAW.cbor  suit_manifest_expAW.diag  suit_manifest_expAW.md  suit_manifest_expD.cbor  (+59 more)
